[gd_scene load_steps=7 format=3 uid="uid://cwjnun1tytdmm"]

[ext_resource type="Script" uid="uid://cmghae80vdcu4" path="res://Scripts/menu_pausa.gd" id="1_7dldy"]
[ext_resource type="Texture2D" uid="uid://dh2aa6puaip6t" path="res://Assets/sprites/GUI/button.png" id="3_pq2yk"]
[ext_resource type="Theme" uid="uid://brhg7qm8u6tf" path="res://Assets/MainTitleButtons.tres" id="4_6ky6l"]

[sub_resource type="Animation" id="Animation_6rupy"]
resource_name = "MenuInGame"
length = 0.3

[sub_resource type="Animation" id="Animation_iefth"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eyy4y"]
_data = {
&"MenuInGame": SubResource("Animation_6rupy"),
&"RESET": SubResource("Animation_iefth")
}

[node name="MenuPausa" type="Node2D"]
process_mode = 3
script = ExtResource("1_7dldy")

[node name="MenuPausa" type="Control" parent="."]
process_mode = 3
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="MenuPausa"]
active = false
libraries = {
&"": SubResource("AnimationLibrary_eyy4y")
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPausa"]
top_level = true
light_mask = 0
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -196.0
offset_right = 192.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(177, 210)
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MenuPausa/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_pq2yk")

[node name="Label" type="Label" parent="MenuPausa/VBoxContainer/TextureRect"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 2.955
offset_bottom = -250.24

[node name="Continuar" type="Button" parent="MenuPausa/VBoxContainer/TextureRect/Label"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_6ky6l")
theme_override_colors/font_hover_color = Color(0.439216, 0.14902, 0.105882, 1)
text = "Continuar"
flat = true

[node name="TextureRect2" type="TextureRect" parent="MenuPausa/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_pq2yk")

[node name="Label2" type="Label" parent="MenuPausa/VBoxContainer/TextureRect2"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="restart" type="Button" parent="MenuPausa/VBoxContainer/TextureRect2/Label2"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_6ky6l")
theme_override_colors/font_hover_color = Color(0.439216, 0.14902, 0.105882, 1)
text = "Restart"
flat = true

[node name="TextureRect3" type="TextureRect" parent="MenuPausa/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_pq2yk")

[node name="Label3" type="Label" parent="MenuPausa/VBoxContainer/TextureRect3"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuPrincipal" type="Button" parent="MenuPausa/VBoxContainer/TextureRect3/Label3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_6ky6l")
theme_override_colors/font_hover_color = Color(0.439216, 0.14902, 0.105882, 1)
text = "Menu Principal"
flat = true

[connection signal="pressed" from="MenuPausa/VBoxContainer/TextureRect/Label/Continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="MenuPausa/VBoxContainer/TextureRect2/Label2/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MenuPausa/VBoxContainer/TextureRect3/Label3/MenuPrincipal" to="." method="_on_menu_principal_pressed"]
